--- a/prices.html
+++ b/prices.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="style/prices.css">
+    <link rel="icon" href="images/logo_icon.jpg">
   </head>
   <body>
 <!-- navbar -->
@@ -70,7 +71,7 @@
           <!-- categores dropdown -->
           <div class="container container__plus">
 
-          <div class="page-title"><h1>Сколько стоят услуги специалистов в Узбекистане</h1></div>
+          <div class="page-title"><h4>Сколько стоят услуги специалистов в Узбекистане</h4></div>
 
           <select class="form-select" aria-label="Default select example" id="service__selection">
 
@@ -187,6 +188,184 @@
                       <div class="text">Стоимость замены высоковольтной проводки, ОТ</div>
                       <div class="price">От 50 000 сўм</div>
                   </div>
+                  <div class="title">Вызов мастера на место</div>
+                  <div class="item">
+                      <div class="text">Открыть автомобиль</div>
+                      <div class="price">От 106 670 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Завести автомобиль</div>
+                      <div class="price">От 98 861 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Отключить сигнализацию</div>
+                      <div class="price">От 83 481 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Разблокировать автомобиль</div>
+                      <div class="price">От 112 365 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Заменить колесо</div>
+                      <div class="price">От 94 402 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Другое</div>
+                      <div class="price">От 0 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость вскрытия замка автомобиля в случае утери ключа, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость компьютерной диагностики двигателя</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость вызова мастера на место, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость отключения и отладки сигнализации, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость мелкого ремонта автомобиля, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость регулировки зажигания</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость ремонта электрики и замены предохранителей</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены или ремонта карбюратора</div>
+                      <div class="price">От 60 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены или ремонта двигателя, ОТ</div>
+                      <div class="price">От 1 500 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость  замены реле</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость снятия секреток, ОТ</div>
+                      <div class="price">От 200 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены катушек и свечей зажигания, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены бензонасоса, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены патрубков системы охлаждения, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены расширительного бачка</div>
+                      <div class="price">От 60 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены высоковольтной проводки, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="title">Вызов мастера на место</div>
+                  <div class="item">
+                      <div class="text">Открыть автомобиль</div>
+                      <div class="price">От 106 670 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Завести автомобиль</div>
+                      <div class="price">От 98 861 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Отключить сигнализацию</div>
+                      <div class="price">От 83 481 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Разблокировать автомобиль</div>
+                      <div class="price">От 112 365 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Заменить колесо</div>
+                      <div class="price">От 94 402 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Другое</div>
+                      <div class="price">От 0 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость вскрытия замка автомобиля в случае утери ключа, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость компьютерной диагностики двигателя</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость вызова мастера на место, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость отключения и отладки сигнализации, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость мелкого ремонта автомобиля, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость регулировки зажигания</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость ремонта электрики и замены предохранителей</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены или ремонта карбюратора</div>
+                      <div class="price">От 60 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены или ремонта двигателя, ОТ</div>
+                      <div class="price">От 1 500 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость  замены реле</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость снятия секреток, ОТ</div>
+                      <div class="price">От 200 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены катушек и свечей зажигания, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены бензонасоса, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены патрубков системы охлаждения, ОТ</div>
+                      <div class="price">От 100 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены расширительного бачка</div>
+                      <div class="price">От 60 000 сўм</div>
+                  </div>
+                  <div class="item">
+                      <div class="text">Стоимость замены высоковольтной проводки, ОТ</div>
+                      <div class="price">От 50 000 сўм</div>
+                  </div>
           </div>
 
           <div class="button">
@@ -201,5 +380,6 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script src="js/prices.js"></script>
       <script src="block-services.js"></script>
+      <script src="js/bootstrap.js"></script>
   </body>
 </html>
