--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
   />
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./style/index.css" />
-    <title>Hello, world!</title>
+    <title>Ilogibor.uz</title>
   </head>
   <body>
     <nav  id="navbar">
       <div id="flex-center" >
-        <div id="nav-container "  class=" container nav-container">
+        <div id="nav-container"  class=" container nav-container">
           <div id="left-containers " class="d-flex">
-            <i
-              class="fa-solid fa-location-arrow margin-on-nav"
-              id="logo-nav"
-            ></i>
             <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
+            <i
+            class="fa-solid fa-location-arrow margin-on-nav logo-nav"
+            id="logo-nav" 
+          ></i>
           </div>
-          <div id="right-container" >
-            <button id="registr-btn">Войти</button>
-            <button id="btn-rate">Оставить отзыв</button>
-            <i class="fa-solid fa-phone-volume" id="phone-btn"></i>
+          <div id="right-container" class="right-container">
+            <button id="registr-btn" class="registr-btn">Войти</button>
+            <button id="btn-rate" class="btn-rate">Оставить отзыв</button>
+            <i class="fa-solid fa-phone-volume  phone-btn" id="phone-btn" ></i>
           </div>
         </div>
       </div>
     </nav>
     <section id="section " class="header-section">
-      <div id="section-container" class=" section-container container d-flex">
+      <div id="section-container" class=" section-container d-flex">
         <div id="right-containers-on-section" class="right-containers-on-section">
           <h1 id="text-on-section" class="text-on-section">
             Cпециалисты по <br />
@@ -45,13 +45,13 @@
             всего Узбекистана!
           </h1>
           <p id="p-on">На ilojibor.uz зашел — мастера нашел!</p>
-          <div id="right-cont-search">
+          <div id="right-cont-search" class="right-cont-search">
             <input
               search="search"
               placeholder="Qaysi ishlarga usta kerak?"
               id="input-custom"
             />
-            <button id="btn-zakas">ОФОРМИТЬ ЗАКАЗ</button>
+            <button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button>
           </div>
         </div>
         <div id="left-containers-on-section" class="left-containers-on-section">
@@ -62,8 +62,8 @@
     
     <!-- status block-->
     
-    <!-- <div id="status-block-flex-container">
-      <div class="status_block">
+    <div id="status-block-flex-container">
+      <div class="status_block container d-flex justify-content-around" >
         <div class="icons__and_txt">
           <div class="icons_and_number icon">
             <i class="fa-regular fa-circle-check icons_style"></i>
@@ -80,7 +80,7 @@
           </div>
           <div class="icons_and_number number">
             <h1 class="h1_style">95%</h1>
-            <p class="text_paragrof">Специалистов с отличными отзывами</p>
+            <p class="text_paragrof">Специалистов с  <br> отличными отзывами</p>
           </div>
         </div>
         <div class="icons__and_txt">
@@ -92,10 +92,11 @@
             <p class="text_paragrof">Заявок мы принимаем <br>    ежедневно</p>
           </div>
         </div>
-      </div> -->
+      </div> 
     </div>
        <!-- Как это работает -->
-       <!-- <div class="container">
+       <div class="container">
+        <h1 style="    font-size: 32px;font-weight: 600;line-height: 39px;margin-bottom: 32px;">Как это работает</h1>
         <div class="cart__items">
           <div class="cart">
             <img
@@ -162,7 +163,10 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+      <div class="main_program container" >
+        <img src="images/prog.png" alt="">
+      </div>
     </body>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
