--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div id="right-cont-search" class="right-cont-search">
             <input
               search="search"
-              placeholder="Qaysi ishlarga usta kerak?"
+              placeholder="Какие мастера вам нужны?"
               id="input-custom"
             />
             <button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button>
