--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   />
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./style/index.css" />
-    <title>Ilogibor.uz</title>
+    <title>Ilojibor.uz</title>
   </head>
   <body>
     <nav  id="navbar">
@@ -61,7 +61,7 @@
     </section>
     
     <!-- status block-->
-    
+    <main>
     <div id="status-block-flex-container">
       <div class="status_block container d-flex justify-content-around" >
         <div class="icons__and_txt">
@@ -167,16 +167,13 @@
       <div class="main_program container" >
         <img src="images/prog.png" alt="">
       </div>
+    </main>
     </body>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"
   ></script>
-  <script src="js/bootstrap.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </html>
 
 
