--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               placeholder="Какие мастера вам нужны?"
               id="input-custom"
             />
-            <button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button>
+           <a href="job.html"><button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button>23uj</a> 
           </div>
         </div>
         <div id="left-containers-on-section" class="left-containers-on-section">
@@ -580,60 +580,47 @@
       <div id="abs-footer">
         <div id="footer-main">
           <div id="flex-containers-footer">
-            <div id="course-container">
-              <h1 class="h1-class-footer">Курсы</h1>
-              <p class="text-class-footer">Веб программирование</p>
-              <p class="text-class-footer">Интернет маркетинг</p>
-              <p class="text-class-footer">Дизайн</p>
-              <p class="text-class-footer">Phyton</p>
-              <p class="text-class-footer">Разработка игр</p>
-              <p class="text-class-footer">Scratch</p>
-              <p class="text-class-footer">Blender</p>
-              <p class="text-class-footer">Ms Office</p>
-              <p class="text-class-footer">Онлайн курсы</p>
+            <div id="course-container " class="course-container ">
+              <h1 class="h1-class-footer">Ilogibor.uz</h1>
             </div>
             <div id="info-container">
-              <h1 class="h1-class-footer">О центре CoddyCamp</h1>
-              <p class="text-class-footer">Бесплатный открытый урок</p>
-              <p class="text-class-footer">Коворкинг</p>
-              <p class="text-class-footer">Все бонусы</p>
-              <p class="text-class-footer">Контакты</p>
-              <p class="text-class-footer">Трудоустройство 2.0</p>
-              <p class="text-class-footer">Для работодателей</p>
+              <p class="text-class-footer">FAQ</p>
+              <p class="text-class-footer">Как работает сайт</p>
+              <p class="text-class-footer">Сколько стоят услуги мастеров</p>
+              <p class="text-class-footer">Карта сайта</p>
             </div>
             <div id="support-container">
-              <h1 class="h1-class-footer">Поддержка</h1>
-              <p class="text-class-footer">Написать менеджеру</p>
-              <p class="text-class-footer">Записаться в коворкинг</p>
-              <p class="text-class-footer">Заявка на консультацию</p>
-              <p class="text-class-footer">Инструкция Zoom</p>
-              <p class="text-class-footer">Жалобы и пожелания</p>
+              <p class="text-class-footer">Каталог специалистов</p>
+              <p class="text-class-footer">Написать нам</p>
+              <p class="text-class-footer">Правила и условия</p>
+              <p class="text-class-footer">Статьи в Блоге</p>
             </div>
             <div id="address-container">
-              <h1 class="h1-class-footer">Наш адрес:</h1>
-              <p class="text-class-footer">
-                г.Ташкент,Яккасарайский район,проспект<br />
-                Саломатина
-              </p>
+              <h1 class="h1-class-footer">Мы в соцсетях:</h1>
+             <div class="adres-program">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-telegram"></i>
+             </div>
               <a class="href-class-footer" href="tel"
                 ><img src="./phone-call.png" style="width: 25px" /> 90 111
                 1866</a
               >
             </div>
           </div>
-          <div id="footer-end-flex">
+          <div id="footer-end-flex" class="footer-end-flex">  
             <div>
-              <h3 id="text-endfooter">© CoddyCamp</h3>
+              <h3 id="text-endfooter">© Ilogibor.uz</h3>
             </div>
-            <div>
-              <a href="" class="decoration">
-                <img class="footer-images" src="./instagram.png" />
+            <div class="decoration-container">
+              <a href="#" class="decoration">
+                <i class="fa-brands fa-telegram"></i>
               </a>
-              <a href="" class="decoration">
-                <img class="footer-images" src="./telegram (1).png" />
+              <a href="#" class="decoration">
+                <i class="fa-brands fa-instagram"></i>
               </a>
-              <a href="" class="decoration">
-                <img class="footer-images" src="./youtube.png" />
+              <a href="#" class="decoration">
+                  <i class="fa-solid fa-phone-volume"></i>
               </a>
             </div>
           </div>
