--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               placeholder="Какие мастера вам нужны?"
               id="input-custom"
             />
-           <a href="job.html"><button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button>23uj</a> 
+           <a href="job.html"><button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button></a> 
           </div>
         </div>
         <div id="left-containers-on-section" class="left-containers-on-section">
@@ -603,9 +603,7 @@
               <i class="fa-brands fa-telegram"></i>
              </div>
               <a class="href-class-footer" href="tel"
-                ><img src="./phone-call.png" style="width: 25px" /> 90 111
-                1866</a
-              >
+                ><img src="./phone-call.png" style="width: 25px" /> 90 1111866</a>
             </div>
           </div>
           <div id="footer-end-flex" class="footer-end-flex">  
