--- a/masters.html
+++ b/masters.html
@@ -15,13 +15,15 @@
         <nav id="navbar">
             <div id="flex-center">
               <div id="nav-container">
-                <div id="left-containers">
-                  <i
-                    class="fa-solid fa-location-arrow margin-on-nav"
-                    id="logo-nav"
-                  ></i>
-                  <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
-                </div>
+                <a href="index.html">
+                    <div id="left-containers">
+                        <i
+                          class="fa-solid fa-location-arrow margin-on-nav"
+                          id="logo-nav"
+                        ></i>
+                        <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
+                      </div>
+                </a>
                 <div id="right-container">
                   <button id="registr-btn">Войти</button>
                   <button id="btn-rate">Оставить отзыв</button>
@@ -288,6 +290,57 @@
     <div class="container text-center">
         <h6>Подберите грамотных специалистов по ремонту домов, квартир, автомобилей и техники. В каталоге собраны контакты специалистов по ремонту из Ташкента и всего Узбекистана</h6>
     </div>
+
+
+    <footer>
+        <div id="abs-footer">
+            <div id="footer-main">
+              <div id="flex-containers-footer">
+                <div id="course-container " class="course-container ">
+                  <h1 class="h1-class-footer">Ilogibor.uz</h1>
+                </div>
+                <div id="info-container">
+                  <p class="text-class-footer">FAQ</p>
+                  <p class="text-class-footer">Как работает сайт</p>
+                  <p class="text-class-footer">Сколько стоят услуги мастеров</p>
+                  <p class="text-class-footer">Карта сайта</p>
+                </div>
+                <div id="support-container">
+                  <p class="text-class-footer">Каталог специалистов</p>
+                  <p class="text-class-footer">Написать нам</p>
+                  <p class="text-class-footer">Правила и условия</p>
+                  <p class="text-class-footer">Статьи в Блоге</p>
+                </div>
+                <div id="address-container">
+                  <h1 class="h1-class-footer">Мы в соцсетях:</h1>
+                 <div class="adres-program">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-telegram"></i>
+                 </div>
+                  <a class="href-class-footer" href="tel"
+                    ><img src="./phone-call.png" style="width: 25px" /> 90 1111866</a>
+                </div>
+              </div>
+              <div id="footer-end-flex" class="footer-end-flex">  
+                <div>
+                  <h3 id="text-endfooter">© Ilogibor.uz</h3>
+                </div>
+                <div class="decoration-container">
+                  <a href="#" class="decoration">
+                    <i class="fa-brands fa-telegram"></i>
+                  </a>
+                  <a href="#" class="decoration">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#" class="decoration">
+                      <i class="fa-solid fa-phone-volume"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </footer>
 
     <script src="js/bootstrap.js"></script>
     <script src="block-services.js"></script>
