--- a/prices.html
+++ b/prices.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="style/prices.css">
     <link rel="icon" href="images/logo_icon.jpg">
+
   </head>
   <body>
 <!-- navbar -->
 <header>
-    <nav id="navbar">
+    <nav id="navbar" class="">
+        
         <div id="flex-center">
           <div id="nav-container">
-            <div id="left-containers">
-              <i
-                class="fa-solid fa-location-arrow margin-on-nav"
-                id="logo-nav"
-              ></i>
-              <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
-            </div>
+            <a href="index.html">
+                <div id="left-containers">
+                <i
+                  class="fa-solid fa-location-arrow margin-on-nav"
+                  id="logo-nav"
+                ></i>
+                <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
+              </div></a>
             <div id="right-container">
               <button id="registr-btn">Войти</button>
               <button id="btn-rate">Оставить отзыв</button>
