--- a/index.html
+++ b/index.html
@@ -513,18 +513,18 @@
           <div id="flex-containers-footer">
             <div id="course-container">
               <h1 class="h1-class-footer">Курсы</h1>
-              <p class="text-class-footer">Веб программирование</p>
-              <p class="text-class-footer">Интернет маркетинг</p>
-              <p class="text-class-footer">Дизайн</p>
-              <p class="text-class-footer">Phyton</p>
-              <p class="text-class-footer">Разработка игр</p>
-              <p class="text-class-footer">Scratch</p>
-              <p class="text-class-footer">Blender</p>
-              <p class="text-class-footer">Ms Office</p>
-              <p class="text-class-footer">Онлайн курсы</p>
+              <p class="text-class-footer">Наши Специалисты</p>
+              <p class="text-class-footer">Приложение</p>
+              <p class="text-class-footer">FAQ</p>
+              <p class="text-class-footer">как работает сайт</p>
+              <p class="text-class-footer">Сколько стоят услуги мастеров?</p>
+              <p class="text-class-footer">Карта сайта</p>
+              <p class="text-class-footer">Статьи о блоге</p>
+              <p class="text-class-footer">Правила и условия</p>
+              <p class="text-class-footer">Написать нам</p>
             </div>
             <div id="info-container">
-              <h1 class="h1-class-footer">О центре CoddyCamp</h1>
+              <h1 class="h1-class-footer">О Ilojibor.uz</h1>
               <p class="text-class-footer">Бесплатный открытый урок</p>
               <p class="text-class-footer">Коворкинг</p>
               <p class="text-class-footer">Все бонусы</p>
@@ -547,23 +547,29 @@
                 Саломатина
               </p>
               <a class="href-class-footer" href="tel"
-                ><img src="./phone-call.png" style="width: 25px" /> 90 111
-                1866</a
+                ><img src="./phone-call.png" style="width: 25px" /> 90 822
+                4094</a
               >
             </div>
           </div>
           <div id="footer-end-flex">
             <div>
-              <h3 id="text-endfooter">© CoddyCamp</h3>
+              <h3 id="text-endfooter">© Ilojibor.uz</h3>
             </div>
             <div>
-              <a href="" class="decoration">
+              <a
+                href="https://www.instagram.com/xmavealkan/"
+                class="decoration"
+              >
                 <img class="footer-images" src="./instagram.png" />
               </a>
-              <a href="" class="decoration">
+              <a href="https://t.me/relaxrum" class="decoration">
                 <img class="footer-images" src="./telegram (1).png" />
               </a>
-              <a href="" class="decoration">
+              <a
+                href="https://www.youtube.com/channel/UCGN0UD8hNBuKruwEUDbGSVA"
+                class="decoration"
+              >
                 <img class="footer-images" src="./youtube.png" />
               </a>
             </div>
