--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./style/index.css" />
+    <link rel="icon" href="./images/logo_icon.jpg">
     <title>Ilojibor.uz</title>
   </head>
   <body>
@@ -46,12 +51,12 @@
           id="right-containers-on-section"
           class="right-containers-on-section"
         >
-          <h1 id="text-on-section" class="text-on-section">
+          <h1 id="text-on-section" class="text-on-section animate__animated animate__fadeInUp">
             Cпециалисты по <br />
             ремонту и строительству <br />
             со всего Узбекистана!
           </h1>
-          <p id="p-on">На ilojibor.uz зашел — мастера нашел!</p>
+          <p id="p-on" class="animate__animated animate__bounceInLeft">На ilojibor.uz зашел — мастера нашел!</p>
           <div id="right-cont-search" class="right-cont-search">
             <input
               search="search"
