--- a/prices.html
+++ b/prices.html
@@ -375,7 +375,55 @@
               <a href="masters.html" id="btn-catalog" class="foot_btn-submit"><button>Найти Мастера</button></a>
           </div>
       </div>
-
+      <footer>
+        <div id="abs-footer">
+            <div id="footer-main">
+              <div id="flex-containers-footer">
+                <div id="course-container " class="course-container ">
+                  <h1 class="h1-class-footer">Ilogibor.uz</h1>
+                </div>
+                <div id="info-container">
+                  <p class="text-class-footer">FAQ</p>
+                  <p class="text-class-footer">Как работает сайт</p>
+                  <p class="text-class-footer">Сколько стоят услуги мастеров</p>
+                  <p class="text-class-footer">Карта сайта</p>
+                </div>
+                <div id="support-container">
+                  <p class="text-class-footer">Каталог специалистов</p>
+                  <p class="text-class-footer">Написать нам</p>
+                  <p class="text-class-footer">Правила и условия</p>
+                  <p class="text-class-footer">Статьи в Блоге</p>
+                </div>
+                <div id="address-container">
+                  <h1 class="h1-class-footer">Мы в соцсетях:</h1>
+                 <div class="adres-program">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-telegram"></i>
+                 </div>
+                  <a class="href-class-footer" href="tel"
+                    ><img src="./phone-call.png" style="width: 25px" /> 90 1111866</a>
+                </div>
+              </div>
+              <div id="footer-end-flex" class="footer-end-flex">  
+                <div>
+                  <h3 id="text-endfooter">© Ilogibor.uz</h3>
+                </div>
+                <div class="decoration-container">
+                  <a href="#" class="decoration">
+                    <i class="fa-brands fa-telegram"></i>
+                  </a>
+                  <a href="#" class="decoration">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#" class="decoration">
+                      <i class="fa-solid fa-phone-volume"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </footer>
 
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
