--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -27,7 +28,7 @@
     <title>Ilojibor.uz</title>
   </head>
   <body>
-    <nav id="navbar">
+    <nav id="navbar" class="animate__animated animate__fadeInDown">
       <div id="flex-center">
         <div id="nav-container" class="container nav-container">
           <div id="left-containers " class="d-flex">
@@ -38,9 +39,9 @@
             ></i>
           </div>
           <div id="right-container" class="right-container">
-            <button id="registr-btn" class="registr-btn">Войти</button>
-            <button id="btn-rate" class="btn-rate">Оставить отзыв</button>
-            <i class="fa-solid fa-phone-volume phone-btn" id="phone-btn"></i>
+            <button id="registr-btn" class="registr-btn animate__animated ">Войти</button>
+            <button id="btn-rate" class="btn-rate animate__animated ">Оставить отзыв</button>
+            <i class="fa-solid fa-phone-volume phone-btn animate__animated animate__shakeX" id="phone-btn"></i>
           </div>
         </div>
       </div>
@@ -57,7 +58,7 @@
             со всего Узбекистана!
           </h1>
           <p id="p-on" class="animate__animated animate__bounceInLeft">На ilojibor.uz зашел — мастера нашел!</p>
-          <div id="right-cont-search" class="right-cont-search">
+          <div id="right-cont-search" class="right-cont-search animate__animated animate__backInLeft">
             <input
               search="search"
               placeholder="Какие мастера вам нужны?"
@@ -66,7 +67,7 @@
            <a href="job.html"><button id="btn-zakas" class="bnt-zakas">ОФОРМИТЬ ЗАКАЗ</button></a> 
           </div>
         </div>
-        <div id="left-containers-on-section" class="left-containers-on-section">
+        <div id="left-containers-on-section" class="left-containers-on-section animate__animated animate__backInRight">
           <img src="./images/usta.png" id="img-on-left-containers" />
         </div>
       </div>
