--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <div id="nav-container" class="container nav-container">
           <div id="left-containers " class="d-flex">
             <h1 id="text-logo" class="margin-on-nav">ilojibor.uz</h1>
-            <i
-              class="fa-solid fa-location-arrow margin-on-nav logo-nav"
-              id="logo-nav"
-            ></i>
+            <i class="fa-solid fa-location-arrow logo-nav" ></i>
           </div>
           <div id="right-container" class="right-container">
             <button id="registr-btn" class="registr-btn animate__animated ">Войти</button>
@@ -54,7 +51,7 @@
         >
           <h1 id="text-on-section" class="text-on-section animate__animated animate__fadeInUp">
             Cпециалисты по <br />
-            ремонту и строительству <br />
+            ремонту машин <br />
             со всего Узбекистана!
           </h1>
           <p id="p-on" class="animate__animated animate__bounceInLeft">На ilojibor.uz зашел — мастера нашел!</p>
