--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="registr-btn" id="open_pop_up">Войти</div>
             </div>
 
-            <div class="pop_up" id="pop_up">
+            <!-- <div class="pop_up" id="pop_up">
               <div class="pop_up_container">
                 <div class="pop_up_body" id="pop_up_body">
                   <p>Войти</p>
@@ -52,7 +52,7 @@
                   <div class="pop_up_close" id="pop_up_close">&#10006</div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <button id="btn-rate" class="btn-rate">Оставить отзыв</button>
             <i class="fa-solid fa-phone-volume phone-btn" id="phone-btn"></i>
           </div>
