--- a/prices.html
+++ b/prices.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="style/prices.css">
     <link rel="icon" href="images/logo_icon.jpg">
-    <link rel="stylesheet" href="style/job.css">
+    <link rel="stylesheet" href="style/services.css">
 
   </head>
   <body>
